Fixed horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,3 +52,76 @@ body {
 
 }
 
+.mainans{
+  overscroll-behavior: none;
+  height: 100vh;
+}
+
+
+.yfguhjbkn {
+  overscroll-behavior: none;
+  height: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.panel {
+  height: 100vh;
+  flex-direction: column;
+}
+
+
+.philosophyMain::-webkit-scrollbar{
+  display: none;
+}
+
+/* 
+.container {
+  outline: 1px solid red;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  flex: 1;
+}
+
+.container_text {
+  display: flex;
+  flex-direction: column;
+}
+
+.accordion {
+  overflow: hidden;
+}
+.accordion [role="region"] {
+  height: 0;
+} */
+
+.accordion {
+  padding: 1rem;
+  max-width: 100%;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+.drawer_title {
+  display: flex;
+  color: inherit;
+  text-decoration: none;
+  background: #f0f0f0;
+  color: #1a1818;
+  padding: 1rem;
+  justify-content: space-between;
+  border: solid 2px black;
+}
+.drawer_content {
+  overflow: hidden;
+  height: auto;
+}
+.drawer_content img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+}
+.spacer {
+  height: 100vh;
+  background-color: coral;
+}
